--- a/vue시작하기/4. 컴포넌트통신.md
+++ b/vue시작하기/4. 컴포넌트통신.md
@@ -93,4 +93,6 @@ new Vue({
 </script>
 ```
 
-### 4) 같은 레벨에서의 컴포넌트 통신 방법
+### 4) 같은 컴포넌트 레벨에서의 통신 방법
+![image](https://user-images.githubusercontent.com/37968260/125456639-eccd990a-bb8a-4b2c-8cd8-f2f98c1bc9b5.png)
+
