--- a/vue실전/애플리케이션제작-라우터.md
+++ b/vue실전/애플리케이션제작-라우터.md
@@ -12,7 +12,7 @@
   - 2.x : 필요 X
   - 3.x : 필요 O
 
-### 라우터 설치 및 구현
+### 1) 라우터 설치 및 구현
 - 라우터 설치: `npm install vue-router`
 - 라우터 구현
   - `VuewRouter` : router 관리하는 객체
@@ -52,4 +52,16 @@ export const router = new VueRouter({
 
 import {router} from './router/index.js'
 ```
-- 
+- `<router-view> </router-view>` 영역이 url에 따라 바뀐다.
+```
+/////////////////////////////////
+//         src/App.vue         //
+/////////////////////////////////
+<div id="app">
+    <router-view> </router-view> 
+</div>
+```
+- component는 `ToolBar`로 등록해도 태그는 `<tool-bar> </tool-bar>`로!
+
+### 2) router-link
+- 구조: `<router-link to="/주소"> item </router-link>`
