--- a/vue기초/1. vue소개.md
+++ b/vue기초/1. vue소개.md
@@ -2,33 +2,32 @@
 : MVVM 패턴의 뷰모델(ViewModel) 레이어에 해당하는 화면(View)단 라이브러리 <br>
 ![image](https://user-images.githubusercontent.com/86991030/125381359-b5ee6600-e3ce-11eb-93e8-9358c2706dc4.png)
 
-예시)
+### 뷰의 Reactivity
+- Object.defineProperty() : 객체의 동작을 재정의하는 API. 
+    - 사용법:
 ```
-        var div = document.querySelector("#app");
-        var viewModel = {}; // 객체 선언
-
-        /*
-        Object.defineProperty(대상객체, 객체속성, {
-            //정의할 내용
-        }); 
-        */
-        
-        Object.defineProperty(viewModel, 'str', {
-            // get : 속성에 접근했을 때의 동작 정의
-            get: function() {
-                console.log('접근');
-            }, 
-            // set : 속성에 값을 할당했을 때의 동작 정의
-            set: function(newValue) {
-                console.log("할당", newValue);
-            }
-        })
+Object.defineProperty(대상객체, 객체속성, {
+    //정의할 내용
+}); 
 ```
-실행결과) <br><br>
-![image](https://user-images.githubusercontent.com/86991030/125389496-41babf00-e3dc-11eb-9c56-a53fec2441d2.png)
+   - 예시:
+```
+Object.defineProperty(viewModel, 'str', {
+    // get : 속성에 접근했을 때의 동작 정의
+    get: function() {
+        console.log('접근');
+    }, 
+    // set : 속성에 값을 할당했을 때의 동작 정의
+    set: function(newValue) {
+        console.log("할당", newValue);
+    }
+})
+```
 
-
-### 참고사항
-- html 기본 뼈대 생성 단축키: `! + [tab] ` <br>
-- `mdn` : 자바스크립트/웹 기술 관한 자세한 설명 나와있는 사이트! <br>
-(https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Object/defineProperty)
+### 즉시실행함수표현(IIFE)
+- 정의되자마자 즉시 실행되는 함수. 
+```
+(function () {
+    statements
+})();
+```
